--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ hr {
 }
 
 #gameBoard {
-    background-color: dimgray;
+    background-color: silver;
     width: 500px;
     height: 555px;
     margin: auto;
